Revision history for Net::DNS                                     -*-text-*-
=============================

*** 0.53_01


Fix IPv6 on AIX

    Binding to the local interface did not work when local address was
    specified as "0" instead of "::". The problem was identified,
    reported and fixed by Achim Adam.



Fix rt.cpan.org 13232
    One uncought AF_INET6.

*** 0.52 July 1, 2005

Feature
    Net::DNS::RR::OPT

    added the the size(), do(),set_do() and clear_do() methods.



*** 0.51_02 June 22, 2005


Fix rt.cpan.org 13297 

    Persistent_udp option broken starting in version 0.50.
    This was fixed, based on a patch by Sidney Markowitz.
    Guido van Rooij independently submitted a similar patch.
    
Fix rt.cpan.org 13289 	
 
    Was caused by a typo. 

Fix rt.cpan.org 13243 and 13191 

    The escaped characters test failed on some system because the 
    the systems dn_expand instead of the supplied dn_expand 
    was used after the makemaker magic linked DNS.xs.

    This was fixed by renaming the dn_expand that comes with the
    library to netdns_dn_expand.


Fix rt.cpan.org 13239:

    When queries are refused the resolver would not take the next
    nameserver on the nameserver list for its next try but skip one.

    I was also made aware that the "use byte" pragma is incompatible
    with pre 5.06 perl. 

    BEGIN { 
          eval { require bytes; }
    }


    It should be noted that for perl versions < 5.006 I had to disable
    the escaped character test. Don't expect domain names with labels
    that contain anything else than host names to work for versions
    earlier than perl 5.6.0.

    Thanks to Vladimir Kotal for the assistance in testing the code on
    his system and the members of the NL-PM list for suggestions and
    education.


*** 0.51_01 June 14, 2005

Fix rt.cpan.org 13232:

    Replaced IF_INET6 by IF_INET6() so that use strict subs does not
    complain in the absence of a definition of IF_INET6 in earlier